--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,25 @@
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+#VC2013
+*.sdf
+*.suo
+*.vcxproj.user
+
+Debug
+Release
+ipch
+# Compiled Object files
+*.slo
+*.lo
+*.o
+ 
+# Compiled Dynamic libraries
+*.so
+*.dylib
+ 
+# Compiled Static libraries
+*.lai
+*.la
+*.a
